# LogiGuard-ai-pfl

./: .env.example  .gitignore  README.md  dashboard.md  docker-compose.yml
backend/: .gitignore  README.md  fix_vector_dim.py  generate_complex_invoice.py  generate_invoice.py  ingest_hs_csv.py  ingest_pdf_notes.py  pyproject.toml  seed.py  test_emb.py  test_processor.py  test_req.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: audit.py  classify.py  events.py  health.py  process.py  review.py  router.py  upload.py
backend/app/completion/: __init__.py  mapper.py
backend/app/completion/codecs/: __init__.py  base.py  icegate.py
backend/app/core/: __init__.py  events.py  llm.py  storage.py
backend/app/extraction/: __init__.py  ocr.py  siv.py  vlm.py
backend/app/graph/: __init__.py  builder.py  nodes.py  state.py
backend/app/models/: __init__.py  audit.py  cache.py  classification.py  invoice.py  tariff.py
backend/app/pipeline/: __init__.py  processor.py
backend/app/prompts/: templates.py
backend/app/rag/: __init__.py  cache.py  epoch_router.py  retriever.py
backend/app/rules/: __init__.py  engine.py
backend/app/schemas/: __init__.py  classification.py  invoice.py  review.py
backend/app/structuring/: __init__.py  validator.py
backend/app/verification/: __init__.py  confidence.py  ensemble.py
