[project]
name = "logiguard-ai"
version = "0.1.0"
description = "LogiGuard AI — Intelligent Customs Tariff Classification Engine"
requires-python = ">=3.10"
readme = "../README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
